# worker-prototype

./: README.md  docker-compose.yml  pyproject.toml
src/worker_prototype/: __init__.py
src/worker_prototype/v0/queue/: redis_queue.py
src/worker_prototype/v0/workflows/: hello_world.py
src/worker_prototype/v0/workflows/tasks/: say_hello.py
src/worker_prototype/v1/: main.py
src/worker_prototype/v2/: db.py  errors.py  main.py  q.py  task_utils.py
src/worker_prototype/v2/tasks/: add_two_random_values_parallel_task.py  add_two_random_values_serial_task.py  fetch_value_task.py
src/worker_prototype/v3/: db.py  errors.py  main.py  q.py  task_registry.py  task_utils.py  task_wrapper.py  thread_util.py
src/worker_prototype/v3/tasks/: add_two_random_values_parallel_task.py  add_two_random_values_serial_task.py  fetch_value_task.py
