[tool.poetry]
name = "worker-prototype"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "worker_prototype", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
main = "worker_prototype:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
